--- a/Notes/Views/AboutDialog.xaml
+++ b/Notes/Views/AboutDialog.xaml
@@ -30,18 +30,10 @@
                 <NavigationThemeTransition/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
-        <ScrollViewer VerticalAlignment="Top" Margin="0,50,0,-15" VerticalScrollBarVisibility="Hidden">
+        <ScrollViewer VerticalAlignment="Top" Margin="0,50,0,-15" VerticalScrollBarVisibility="Hidden" ViewChanged="ScrollViewer_ViewChanged">
             <StackPanel VerticalAlignment="Bottom" Padding="0,-130,0,0" Margin="0,0,0,0">
                 <Image Source="ms-appx:///Assets/IconReadme.png" Margin="15,140,0,5" HorizontalAlignment="Left" Width="211" Height="42" VerticalAlignment="Top"/>
-                <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,-40,160,0" Height="34">
-                    <TextBlock Text="Insider" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Top"/>
-                    <TextBlock Text="Bloom" FontSize="12" VerticalAlignment="Bottom" Opacity="0.7" HorizontalAlignment="Left"/>
-                </Grid>
-                <AppBarButton x:Name="InsiderBt" HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="0,-55,135,0" FontSize="10" Width="110" Height="65" CornerRadius="5,5,5,5" Click="InsiderBt_Click">
-                    <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xECA7;" Margin="1,10,85,-10" VerticalAlignment="Center" HorizontalAlignment="Left" />
-                    </AppBarButton.Icon>
-                </AppBarButton>
+                <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,-40,160,0" Height="34"/>
                 <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,-51,270,0" Height="34" Width="64">
                     <TextBlock x:Uid="/About/Version" FontSize="14" FontWeight="SemiBold" VerticalAlignment="Top"/>
                     <TextBlock Text="Pre-Alpha 1" FontSize="12" VerticalAlignment="Bottom" Opacity="0.7"/>
@@ -193,11 +185,6 @@
         <AppBarButton Click="Button_Click" HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="0,9,10,0" FontSize="10" Width="36" Height="44">
             <AppBarButton.Icon>
                 <FontIcon Glyph="&#xE10A;" Margin="1,-1,1,3" VerticalAlignment="Center" />
-            </AppBarButton.Icon>
-        </AppBarButton>
-        <AppBarButton Click="AppBarButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top"  Margin="0,9,55,0" FontSize="10" Width="36" Height="44">
-            <AppBarButton.Icon>
-                <FontIcon Glyph="&#xED15;" Margin="1,-1,1,3" VerticalAlignment="Center" />
             </AppBarButton.Icon>
         </AppBarButton>
         <TextBlock x:Uid="About" Margin="15,15,0,0" FontSize="24" FontWeight="SemiBold" VerticalAlignment="Top" HorizontalAlignment="Left"/>
