--- a/Notes/Views/VersionDialog.xaml
+++ b/Notes/Views/VersionDialog.xaml
@@ -1,11 +1,10 @@
-﻿<ContentDialog xmlns:my="using:Microsoft.UI.Xaml.Controls" Style="{StaticResource DefaultContentDialogStyle}"
-    x:Class="Notes.Views.VersionDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Notes.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+﻿<ContentDialog  Style="{StaticResource DefaultContentDialogStyle}"
+                x:Class="Notes.Views.VersionDialog"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                mc:Ignorable="d"
     Title=""
     PrimaryButtonText=""
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
